--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "ermolaev-nv/simpleCacheBitrix",
+    "name": "ermolaevnv/simpleCacheBitrix",
     "license": "MIT",
     "keywords": [
         "bitrix",
@@ -11,14 +11,14 @@
             "email": "ermolaev-nv@ro.ru"
         }
     ],
-    "homepage": "https://github.com/ermolaev-nv/SimpleCacheBitrix",
+    "homepage": "https://github.com/ErmolaevNV/SimpleCacheBitrix",
     "require": {
         "php": ">=7.0.0",
         "psr/simple-cache": "^1.0"
     },
     "autoload": {
         "psr-4": {
-            "Ermolaev-nv\\SimpleCacheBitrix" : "src/"
+            "Ermolaev_nv\\SimpleCacheBitrix" : "src/"
         }
     }
 }
