--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     },
     "autoload": {
         "psr-4": {
-            "Ermolaev_nv\\SimpleCacheBitrix" : "src/"
+            "ErmolaevNV\\SimpleCacheBitrix\\" : "src/"
         }
     }
 }
